--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "riot": "^3.0.2",
+    "riot-route": "^3.0.2"
+  }
 }
